--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "pretty-type-name"
 version = "0.1.0"
 authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
+description = "a shorter version of std::any::type_name"
+repository = "https://github.com/jakobhellermann/pretty-type-name"
+license = "MIT"
 edition = "2018"
 
 [dependencies]
